fix: okay, biped model is fixed more or less